fabric/testdata/out/ing_spp-product-search-rds-get-api-product-queries-wildcard-admins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    metacontroller.k8s.io/last-applied-configuration: '{"apiVersion":"extensions/v1beta1","kind":"Ingress","metadata":{"annotations":{"zalando.org/aws-load-balancer-ssl-policy":"ELBSecurityPolicy-FS-2018-06","zalando.org/skipper-filter":"oauthTokeninfoAnyKV(\"realm\",
      \"/services\", \"realm\", \"/employees\") -\u003e enableAccessLog(2, 4, 5) -\u003e
      unverifiedAuditLog(\"https://identity.zalando.com/managed-id\") -\u003e oauthTokeninfoAllScope(\"uid\")
      -\u003e flowId(\"reuse\") -\u003e forwardToken(\"X-TokenInfo-Forward\", \"uid\",
      \"scope\", \"realm\")","zalando.org/skipper-predicate":"Weight(5) \u0026\u0026
      Path(\"/api/product-queries/**\") \u0026\u0026 Method(\"GET\") \u0026\u0026
      JWTPayloadAllKV(\"https://identity.zalando.com/realm\", \"users\") \u0026\u0026
      JWTPayloadAnyKV(\"https://identity.zalando.com/managed-id\", \"kanli\", \"https://identity.zalando.com/managed-id\",
      \"jocarroll\", \"https://identity.zalando.com/managed-id\", \"rlagarferrei\",
      \"https://identity.zalando.com/managed-id\", \"abaquero\", \"https://identity.zalando.com/managed-id\",
      \"dgordon\", \"https://identity.zalando.com/managed-id\", \"pslowinski\") \u0026\u0026
      Header(\"X-Forwarded-Proto\", \"https\")"},"labels":{"controller-uid":"3802c424-e375-11e9-9959-0a1d439efe60","deployment-id":"d-a4z9cmmcah7jmdg3z8qmcza5a","pipeline-id":"l-hm6diyu6r83qkb7phpzcao5cz"},"name":"spp-product-search-rds-get-api-product-queries-wildcard-admins","namespace":"default"},"spec":{"rules":[{"host":"spp-product-search-rds.smart-product-platform-test.zalan.do","http":{"paths":[{"backend":{"serviceName":"spp-product-search-rds","servicePort":"http"},"pathType":"Implementa [...]
    zalando.org/aws-load-balancer-ssl-policy: ELBSecurityPolicy-FS-2018-06
    zalando.org/skipper-filter: oauthTokeninfoAnyKV("realm", "/services", "realm",
      "/employees") -> enableAccessLog(2, 4, 5) -> unverifiedAuditLog("https://identity.zalando.com/managed-id")
      -> oauthTokeninfoAllScope("uid") -> flowId("reuse") -> forwardToken("X-TokenInfo-Forward",
      "uid", "scope", "realm")
    zalando.org/skipper-predicate: Weight(5) && Path("/api/product-queries/**") &&
      Method("GET") && JWTPayloadAllKV("https://identity.zalando.com/realm", "users")
      && JWTPayloadAnyKV("https://identity.zalando.com/managed-id", "kanli", "https://identity.zalando.com/managed-id",
      "jocarroll", "https://identity.zalando.com/managed-id", "rlagarferrei", "https://identity.zalando.com/managed-id",
      "abaquero", "https://identity.zalando.com/managed-id", "dgordon", "https://identity.zalando.com/managed-id",
      "pslowinski") && Header("X-Forwarded-Proto", "https")
  creationTimestamp: "2019-09-30T11:27:00Z"
  generation: 1
  labels:
    controller-uid: 3802c424-e375-11e9-9959-0a1d439efe60
    deployment-id: d-a4z9cmmcah7jmdg3z8qmcza5a
    pipeline-id: l-hm6diyu6r83qkb7phpzcao5cz
  name: spp-product-search-rds-get-api-product-queries-wildcard-admins
  namespace: default
  ownerReferences:
  - apiVersion: zalando.org/v1
    blockOwnerDeletion: true
    controller: true
    kind: FabricGateway
    name: spp-product-search-rds
    uid: 3802c424-e375-11e9-9959-0a1d439efe60
  resourceVersion: "1357490005"
  uid: 38181d35-e375-11e9-9a79-0225683d17cc
spec:
  rules:
  - host: spp-product-search-rds.smart-product-platform-test.zalan.do
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-rds
            port:
              name: http
        pathType: ImplementationSpecific
  - host: spp-product-search-rds-test.zalandoapis.com
    http:
      paths:
      - backend:
          service:
            name: spp-product-search-rds
            port:
              name: http
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - hostname: kube-ing-lb-vejw9uwox1cj-898356825914b821.elb.eu-central-1.amazonaws.com
